PSoC/SensorSender/SensorSender.cydsn/REBUILD.log
--------------- Rebuild Started: 11/01/2024 10:48:20 Project: SensorSender, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\sensor.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Pin_2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Pin_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Counter_Sensor.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Counter_Sensor_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock_2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Sensor_Input.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\sensor_input_isr.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SensorSender.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SensorSender.elf"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SensorSender.map"
Deleting file ".\SensorSender.cycdx"
Deleting file ".\SensorSender.svd"
Deleting file ".\SensorSender.rpt"
Deleting file ".\SensorSender_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\degn\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\degn\OneDrive - Aarhus universitet\Skrivebord\AU\E4\PRJ4\Git\E4PRJ\PSoC\SensorSender\SensorSender.cydsn\SensorSender.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\degn\OneDrive - Aarhus universitet\Skrivebord\AU\E4\PRJ4\Git\E4PRJ\PSoC\SensorSender\SensorSender.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
Warning: sta.M0021: SensorSender_timing.html: Warning-1350: Asynchronous path(s) exist from "Clock_2(routed)" to "Clock_2". See the timing report for details. (File=C:\Users\degn\OneDrive - Aarhus universitet\Skrivebord\AU\E4\PRJ4\Git\E4PRJ\PSoC\SensorSender\SensorSender.cydsn\SensorSender_timing.html)
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:11:5: error: 'U' undeclared (first use in this function)
     U
     ^
main.c:11:5: note: each undeclared identifier is reported only once for each function it appears in
main.c:12:5: error: expected ';' before 'char'
     char buff[256];
     ^
main.c:15:17: error: 'buff' undeclared (first use in this function)
         sprintf(buff, "Count: %i \r\n", count);
                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 11/01/2024 10:48:33 ---------------
